complete initial design for header

--- a/e_m_adventures/src/App.css
+++ b/e_m_adventures/src/App.css
@@ -1,38 +1,84 @@
+/* CSS RESET */
+/* https://alligator.io/css/minimal-css-reset/ */
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,600&family=Pacifico&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Aguafina+Script&display=swap');
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+  height: 100%;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
+/* ol, ul {
+    list-style: none;
+  } */
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+/* END OF CSS RESET */
+
+body {
+  height: 100%;
+}
+
 .App {
-  text-align: center;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+  text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a:active,
+a:visited {
+  color: var(--main-color-white);
+  text-decoration: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button {
+  font-size: 1.8rem;
 }
 
-.App-link {
-  color: #61dafb;
+button:focus {
+  outline: 2px solid var(--main-color-gold);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+label {
+  color: var(--main-color-white);
+}
+
+p {
+  font-size: 1.8rem;
+  color: var(--main-color-white);
+}
+
+h1 {
+  font-size: 3.5rem;
+  color: var(--main-color-white);
 }
