add icon to login btn

--- a/e_m_adventures/src/Variables.css
+++ b/e_m_adventures/src/Variables.css
@@ -2,7 +2,7 @@
   /* PRIMARY COLOR VARIABLES */
   --main-color-black: #000000;
   --main-color-white: #fff;
-  --main-color-gold: #d4af37;
+  --main-color-gold: #b08f26;
   --sec-color-grey: #212121;
   /* SECONDARY COLOR VARIABLES */
   --sec-color-grey-light: #999999;
