--- a/e_m_adventures/src/components/Header/HeaderNavigation/HeaderNavigation.module.css
+++ b/e_m_adventures/src/components/Header/HeaderNavigation/HeaderNavigation.module.css
@@ -60,4 +60,12 @@
   outline: none;
   border: none;
   margin-left: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loginBtn ion-icon {
+  font-size: 4rem;
+  color: var(--main-color-gold);
 }
