--- a/e_m_adventures/src/layout/Home/Home.module.css
+++ b/e_m_adventures/src/layout/Home/Home.module.css
@@ -3,5 +3,5 @@
   display: grid;
   grid-template-columns: 100%;
   grid-auto-rows: max-content;
-  background-color: red;
+  /* background-color: red; */
 }
