--- a/e_m_adventures/src/components/Header/Header.module.css
+++ b/e_m_adventures/src/components/Header/Header.module.css
@@ -1,5 +1,5 @@
 .header {
-  height: 80vh;
+  min-height: 80vh;
   background-color: var(--main-color-black);
   background-image: url('../../assets/img/caravan.jpg');
   background-repeat: no-repeat;
