style weather card. add explore world sectiion

--- a/e_m_adventures/src/Variables.css
+++ b/e_m_adventures/src/Variables.css
@@ -6,4 +6,6 @@
   --sec-color-grey: #212121;
   /* SECONDARY COLOR VARIABLES */
   --sec-color-grey-light: #999999;
+  /* BORDER VARIABLES */
+  --b-2-gold: 2px solid var(--main-color-gold);
 }
