add footer template

--- a/e_m_adventures/src/components/Food/Food.module.css
+++ b/e_m_adventures/src/components/Food/Food.module.css
@@ -42,3 +42,9 @@
   border-radius: 2rem;
   font-size: 4rem;
 }
+
+.foodButton:hover {
+  background-color: var(--main-color-black);
+  color: var(--main-color-gold);
+  border-color: var(--main-color-gold);
+}
