--- a/e_m_adventures/src/components/ExploreWorld/ExploreWorld.module.css
+++ b/e_m_adventures/src/components/ExploreWorld/ExploreWorld.module.css
@@ -1,6 +1,7 @@
 .exploreWorld {
   width: 90%;
   margin: 0 auto;
+  margin-bottom: 5rem;
 }
 
 .exploreWorldContainer {
@@ -12,6 +13,10 @@
 .exploreWorldCard {
   width: 30%;
   position: relative;
+}
+
+.exploreWorldHero {
+  border-radius: 2rem;
 }
 
 .exploreWorldFlag {
