create covid page

--- a/e_m_adventures/src/layout/Home/Home.module.css
+++ b/e_m_adventures/src/layout/Home/Home.module.css
@@ -1,7 +1,7 @@
 .home {
   min-height: 100vh;
   display: grid;
-  grid-template-columns: 100%;
+  width: 100%;
   grid-auto-rows: max-content;
   /* background-color: red; */
 }
