--- a/e_m_adventures/src/components/Header/Header.module.css
+++ b/e_m_adventures/src/components/Header/Header.module.css
@@ -16,4 +16,6 @@
   /* display: flex; */
   /* align-self: flex-end; */
   margin-top: 50rem;
+  color: var(--main-color-white);
+  /* -webkit-text-stroke: 2px var(--main-color-gold); */
 }
