--- a/e_m_adventures/src/components/Header/HeaderNavigation/HeaderNavigation.module.css
+++ b/e_m_adventures/src/components/Header/HeaderNavigation/HeaderNavigation.module.css
@@ -63,6 +63,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: var(--main-color-white);
+  padding: 1rem;
 }
 
 .loginBtn ion-icon {
