--- a/e_m_adventures/src/components/Header/HeaderSmall/HeaderSmall.module.css
+++ b/e_m_adventures/src/components/Header/HeaderSmall/HeaderSmall.module.css
@@ -27,4 +27,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: var(--main-color-white);
+  padding: 1rem;
+}
+
+.loginBtn ion-icon {
+  font-size: 4rem;
+  color: var(--main-color-gold);
 }
