refactor buttons to Buttons.js. refactor grid layouts

--- a/e_m_adventures/src/components/LoginSection/LoginSection.module.css
+++ b/e_m_adventures/src/components/LoginSection/LoginSection.module.css
@@ -1,6 +1,6 @@
 .login {
   width: 70%;
-  height: 70vh;
+  min-height: 70vh;
 
   margin: 0 auto;
   display: flex;
@@ -14,6 +14,7 @@
   padding: 5rem;
   border-radius: 2rem;
   border: 5px solid var(--main-color-gold);
+  margin: 4rem;
 }
 
 .loginForm {
