--- a/e_m_adventures/src/Grids.css
+++ b/e_m_adventures/src/Grids.css
@@ -4,3 +4,11 @@
   width: 100%;
   grid-auto-rows: max-content;
 }
+
+.contentGrid {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-auto-rows: max-content;
+  width: 70%;
+  margin: 5rem auto;
+}
