--- a/e_m_adventures/src/components/Header/HeaderNavigation/HeaderNavigation.module.css
+++ b/e_m_adventures/src/components/Header/HeaderNavigation/HeaderNavigation.module.css
@@ -50,5 +50,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: 5rem;
+  margin-right: 3rem;
+}
+
+.loginPara {
+  margin-right: 2rem;
 }
