--- a/e_m_adventures/src/components/miniComponents/Buttons/Buttons.module.css
+++ b/e_m_adventures/src/components/miniComponents/Buttons/Buttons.module.css
@@ -38,3 +38,10 @@
   color: var(--main-color-gold);
   border-color: var(--main-color-gold);
 }
+
+@media (max-width: 600px) {
+  .foodBtn {
+    height: 8rem;
+    width: 18rem;
+  }
+}
