--- a/e_m_adventures/src/components/ExploreWorld/ExploreWorld.module.css
+++ b/e_m_adventures/src/components/ExploreWorld/ExploreWorld.module.css
@@ -44,3 +44,15 @@
     display: none;
   }
 }
+
+@media (max-width: 500px) {
+  .exploreWorldCard {
+    flex-basis: 40rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .exploreWorldCard {
+    flex-basis: 35rem;
+  }
+}
