--- a/e_m_adventures/src/components/Food/Food.module.css
+++ b/e_m_adventures/src/components/Food/Food.module.css
@@ -30,8 +30,69 @@
   color: var(--main-color-gold);
 }
 
+.foodBtn {
+  position: absolute;
+  top: 11%;
+  left: 73%;
+  height: 13rem;
+  width: 23rem;
+  border: 2px solid var(--main-color-black);
+  outline: none;
+  background-color: var(--main-color-gold);
+  border-radius: 2rem;
+  font-size: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media (max-width: 1095px) {
   .foodImg {
     height: auto;
+  }
+}
+
+@media (max-width: 600px) {
+  .foodBtn {
+    height: 8rem;
+    width: 18rem;
+  }
+}
+
+@media (max-width: 430px) {
+  .foodImg {
+    /* height: 50rem; */
+  }
+
+  .foodBtn {
+    left: 68%;
+  }
+
+  .headerBtm {
+    top: 21%;
+  }
+
+  .headerAdditional {
+    top: 35%;
+  }
+}
+
+@media (max-width: 360px) {
+  .foodImg {
+    /* height: 50rem; */
+  }
+
+  .foodBtn {
+    left: 65%;
+    height: 7rem;
+    width: 17rem;
+  }
+
+  .headerBtm {
+    top: 23%;
+  }
+
+  .headerAdditional {
+    top: 38%;
   }
 }
