--- a/e_m_adventures/src/components/Header/HeaderNavigation/HeaderNavigation.module.css
+++ b/e_m_adventures/src/components/Header/HeaderNavigation/HeaderNavigation.module.css
@@ -53,7 +53,7 @@
   margin-right: 3rem;
 }
 
-.loginPara {
+.loginManage {
   margin-right: 2rem;
 }
 
@@ -76,5 +76,18 @@
 
   .logo {
     margin: 0;
+  }
+}
+
+@media (max-width: 600px) {
+  .loginManage {
+    display: none;
+  }
+}
+
+@media (max-width: 390px) {
+  .navBtnContainer {
+    display: flex;
+    flex-direction: column;
   }
 }
