add login and signup responsiveness

--- a/e_m_adventures/src/components/LoginSection/LoginSection.module.css
+++ b/e_m_adventures/src/components/LoginSection/LoginSection.module.css
@@ -9,7 +9,7 @@
 
 .loginCard {
   background-color: var(--main-color-black);
-  width: 60%;
+  min-width: 60%;
   padding: 3rem;
   margin: 5rem;
   border-radius: 3rem;
@@ -27,6 +27,7 @@
 .cardHeaderRight {
   width: 45%;
   padding: 1rem;
+  min-width: max-content;
 }
 
 .cardHeaderLeft {
@@ -81,6 +82,10 @@
   margin: 2rem 0;
 }
 
+.formInputContainer label {
+  margin-right: 1rem;
+}
+
 .formInputContainer input {
   margin-left: auto;
   margin-right: 0;
@@ -99,4 +104,26 @@
 .forgot {
   font-size: 2rem;
   text-decoration: underline;
+}
+
+@media (max-width: 1530px) {
+  .loginForm {
+    width: 60%;
+  }
+}
+
+@media (max-width: 800px) {
+  .loginForm {
+    width: 80%;
+  }
+}
+
+@media (max-width: 370px) {
+  .cardHeading {
+    font-size: 2.5rem;
+  }
+
+  .loginForm {
+    width: 100%;
+  }
 }
