--- a/e_m_adventures/src/Grids.css
+++ b/e_m_adventures/src/Grids.css
@@ -13,3 +13,15 @@
   width: 70%;
   margin: 5rem auto;
 }
+
+@media (max-width: 1025px) {
+  .contentGrid {
+    width: 90%;
+  }
+}
+
+@media (max-width: 480px) {
+  .contentGrid {
+    grid-template-columns: 100%;
+  }
+} ;
