--- a/e_m_adventures/src/components/Food/FoodContent/FoodContent.module.css
+++ b/e_m_adventures/src/components/Food/FoodContent/FoodContent.module.css
@@ -128,6 +128,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  align-content: flex-start;
   /* height: max-content; */
 }
 
