--- a/e_m_adventures/src/components/Header/HeaderSmall/HeaderSmall.module.css
+++ b/e_m_adventures/src/components/Header/HeaderSmall/HeaderSmall.module.css
@@ -16,3 +16,31 @@
   justify-content: center;
   align-items: center;
 }
+
+@media (max-width: 1510px) {
+  /* .headerSmall {
+    flex-wrap: wrap;
+    justify-content: center;
+  } */
+
+  .logo {
+    margin-right: 4rem;
+  }
+}
+
+@media (max-width: 1400px) {
+  .headerSmall {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .loginContainer {
+    margin: 2rem 0;
+  }
+}
+
+@media (max-width: 1070px) {
+  .logo {
+    margin: 2rem 4rem 2rem 0;
+  }
+}
