--- a/e_m_adventures/src/components/Header/Header.module.css
+++ b/e_m_adventures/src/components/Header/Header.module.css
@@ -9,6 +9,7 @@
   flex-direction: column;
   align-items: center;
   padding: 2rem;
+  position: relative;
   /* justify-content: flex-end; */
 }
 
@@ -29,6 +30,19 @@
   background-color: var(--main-color-gold);
   display: none;
 }
+
+.btnClose {
+  border-radius: 50rem;
+  background-color: red;
+  width: 10rem;
+  height: 10rem;
+  border: 2px solid var(--main-color-black);
+  position: fixed;
+  left: 76%;
+  top: 8%;
+  z-index: 2000;
+}
+
 @media (max-width: 600px) {
   .header {
     min-height: 40vh;
