--- a/e_m_adventures/src/components/miniComponents/DropdownMenu/DropdownMenu.module.css
+++ b/e_m_adventures/src/components/miniComponents/DropdownMenu/DropdownMenu.module.css
@@ -40,7 +40,7 @@
   background: #ffffff;
   border-radius: 8px;
   position: absolute;
-  top: 60px;
+  top: 6rem;
   right: 0;
   width: 20rem;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
@@ -48,6 +48,7 @@
   visibility: hidden;
   transform: translateY(-20px);
   transition: opacity 0.4s ease, transform 0.4s ease, visibility 0.4s;
+  z-index: 2000;
 }
 
 .menu.active {
