--- a/e_m_adventures/src/components/Food/Food.module.css
+++ b/e_m_adventures/src/components/Food/Food.module.css
@@ -44,6 +44,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  color: var(--main-color-black);
+}
+
+.foodBtn:hover {
+  background-color: var(--main-color-black);
+  color: var(--main-color-gold);
+  border-color: var(--main-color-gold);
 }
 
 @media (max-width: 1095px) {
