--- a/e_m_adventures/src/components/miniComponents/DropdownMenu/DropdownMenu.module.css
+++ b/e_m_adventures/src/components/miniComponents/DropdownMenu/DropdownMenu.module.css
@@ -17,18 +17,15 @@
   justify-content: center;
   background-color: var(--main-color-white);
   padding: 1rem;
-  /* background: #ffffff;
-  border-radius: 90px;
+}
+
+.menuTrigger:hover {
+  background-color: var(--main-color-gold);
   cursor: pointer;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 4px 6px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-  border: none;
-  vertical-align: middle;
-  transition: box-shadow 0.4s ease;
-  margin-left: auto; Strictly for positioning */
+}
+
+.menuTrigger:hover ion-icon {
+  color: var(--main-color-white);
 }
 
 .menuTrigger ion-icon {
