--- a/e_m_adventures/src/components/DashboardContent/DashboardContent.module.css
+++ b/e_m_adventures/src/components/DashboardContent/DashboardContent.module.css
@@ -63,22 +63,26 @@
   grid-row: 2;
   grid-column: 2;
   display: flex;
+  align-items: center;
   align-content: flex-start;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
   padding: 0.5rem;
   width: 100%;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 .bookingCardContent {
   background-color: var(--main-color-gold);
-  flex-basis: 47%;
+  flex-basis: 70%;
   padding: 1rem;
   border-radius: 2rem;
   margin: 0.5rem;
   height: max-content;
   flex-shrink: 0;
   flex-grow: 0;
+  text-align: center;
 }
 
 .bookingCardContent ul {
@@ -93,6 +97,12 @@
   font-size: 1rem;
 }
 
+@media (max-width: 820px) {
+  .bookingCardContent {
+    flex-basis: 90%;
+  }
+}
+
 @media (max-width: 480px) {
   .bookingHeading {
     grid-row: 3;
@@ -104,7 +114,9 @@
     grid-row: 4;
     grid-column: 1;
     width: 50%;
+    height: 60%;
     justify-self: center;
+    margin-bottom: 0;
   }
 
   .bookingCardContent {
@@ -118,6 +130,10 @@
 }
 
 @media (max-width: 305px) {
+  .bookingCard {
+    width: 80%;
+  }
+
   .bookingCardContent {
     width: 98%;
   }
