--- a/e_m_adventures/src/components/Food/FoodContent/FoodContent.module.css
+++ b/e_m_adventures/src/components/Food/FoodContent/FoodContent.module.css
@@ -112,9 +112,11 @@
 .sidebarCardContainer {
   display: flex;
   justify-content: space-between;
-  /* align-items: center; */
-  /* height: 100%; */
+  align-content: flex-start;
+  justify-content: center;
   width: 100%;
+  height: 50rem;
+  overflow-y: scroll;
   flex-wrap: wrap;
   padding: 0.5rem;
 }
@@ -129,9 +131,47 @@
   justify-content: center;
   align-items: center;
   align-content: flex-start;
-  /* height: max-content; */
 }
 
 .sidebarCard h6 {
   color: var(--main-color-gold);
 }
+
+.sidebarSmall {
+  display: none;
+}
+
+@media (max-width: 480px) {
+  .sidebarHeading {
+    justify-self: start;
+    grid-row: 5;
+    grid-column: 1;
+  }
+
+  .sidebarSmall {
+    display: flex;
+    grid-row: 6;
+    flex-wrap: nowrap;
+    overflow-y: scroll;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
+  .sidebarContent {
+    min-width: 60rem;
+  }
+
+  .sidebarTop,
+  .sidebarMid,
+  .sidebarBtm {
+    display: none;
+  }
+
+  .sidebarSmall::-webkit-scrollbar {
+    display: none;
+  }
+
+  .mustSeeContent {
+    min-width: 30rem;
+  }
+} ;
