style forgot password

--- a/e_m_adventures/src/components/ForgotPasswordContent/ForgotPasswordContent.module.css
+++ b/e_m_adventures/src/components/ForgotPasswordContent/ForgotPasswordContent.module.css
@@ -4,3 +4,153 @@
   width: 70%;
   margin: 5rem auto;
 }
+
+.login {
+  width: 70%;
+  min-height: 70vh;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.loginCard {
+  background-color: var(--main-color-black);
+  min-width: 60%;
+  padding: 3rem;
+  margin: 5rem;
+  border-radius: 3rem;
+  height: 53rem;
+}
+
+.cardHeader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem 0;
+}
+
+.cardHeaderLeft,
+.cardHeaderRight {
+  width: 45%;
+  padding: 1rem;
+  min-width: max-content;
+}
+
+.cardHeaderLeft {
+  border-bottom: 2px solid var(--main-color-gold);
+  border-right: 2px solid var(--main-color-gold);
+}
+
+.cardHeaderRight {
+  border-top: 2px solid var(--main-color-gold);
+  border-right: 2px solid var(--main-color-gold);
+}
+
+.cardHeading {
+  width: max-content;
+  font-size: 3rem;
+  margin: 0 auto;
+  color: var(--main-color-white);
+}
+
+.heading {
+  margin: 3rem;
+}
+
+.loginContainer {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  /* background-color: var(--main-color-black);
+  width: 50%;
+  padding: 5rem;
+  border-radius: 2rem;
+  border: 5px solid var(--main-color-gold);
+  margin: 4rem; */
+}
+
+.loginContainerHeading {
+  color: var(--main-color-white);
+}
+
+.loginForm {
+  display: flex;
+  flex-direction: column;
+  height: max-content;
+  font-size: 2rem;
+  width: 50%;
+}
+
+.formInputContainer {
+  display: flex;
+  /* width: 50%; */
+  margin: 4rem 0;
+}
+
+.formInputContainer label {
+  margin-right: 1rem;
+}
+
+.formInputContainer input {
+  margin-left: auto;
+  margin-right: 0;
+}
+
+.loginBtn {
+  padding: 2rem;
+  border-radius: 2rem;
+  background-color: var(--main-color-gold);
+  color: var(--main-color-black) !important;
+  font-size: 2rem;
+  margin: 14rem auto 2rem auto;
+  width: 20rem;
+  border: 2px solid var(--main-color-white);
+}
+
+.forgot {
+  font-size: 2rem;
+  text-decoration: underline;
+}
+
+.forgot a {
+  color: var(--main-color-white);
+  text-decoration: none;
+}
+
+.forgot a:hover,
+.forgot a:focus {
+  color: var(--main-color-gold);
+  text-decoration: underline;
+}
+
+@media (max-width: 1530px) {
+  .loginForm {
+    width: 60%;
+  }
+
+  .loginCard {
+    min-width: 80%;
+  }
+}
+
+@media (max-width: 800px) {
+  .loginForm {
+    width: 80%;
+  }
+
+  .loginCard {
+    min-width: 90%;
+  }
+}
+
+@media (max-width: 370px) {
+  .cardHeading {
+    font-size: 2.5rem;
+  }
+
+  .loginForm {
+    width: 100%;
+  }
+}
