--- a/e_m_adventures/src/components/Footer/Footer.module.css
+++ b/e_m_adventures/src/components/Footer/Footer.module.css
@@ -48,9 +48,7 @@
 }
 
 .footerBtmContent a,
-.footerBtmContent a:visited,
-.footerBtmContentIcon a:hover,
-.footerBtmContentIcon a:hover:visited {
+.footerBtmContent a:visited {
   color: var(--main-color-gold);
 }
 
@@ -72,7 +70,7 @@
   font-size: 3rem;
 }
 
-.footerBtmContentIcon a:link {
+.footerBtmContentIcon a {
   color: var(--sec-color-grey-light);
 }
 
