--- a/e_m_adventures/src/components/Header/HeaderSearch/SearchPopUP/SearchPopUp.module.css
+++ b/e_m_adventures/src/components/Header/HeaderSearch/SearchPopUP/SearchPopUp.module.css
@@ -65,11 +65,10 @@
   flex-direction: column;
 }
 
-/* .date input,
+.date input,
 .guests select {
-  height: 5rem;
-  width: 2000000rem;
-} */
+  width: 100%;
+}
 
 .btnSubmit {
   border: none;
