--- a/e_m_adventures/src/components/SignupContent/SignupContent.module.css
+++ b/e_m_adventures/src/components/SignupContent/SignupContent.module.css
@@ -109,11 +109,19 @@
   .loginForm {
     width: 70%;
   }
+
+  .loginCard {
+    min-width: 80%;
+  }
 }
 
 @media (max-width: 800px) {
   .loginForm {
     width: 80%;
+  }
+
+  .loginCard {
+    min-width: 90%;
   }
 }
 
