--- a/e_m_adventures/src/components/miniComponents/ErrorComponent/ErrorComponent.module.css
+++ b/e_m_adventures/src/components/miniComponents/ErrorComponent/ErrorComponent.module.css
@@ -6,5 +6,5 @@
   text-align: center;
   border-radius: 3rem;
   color: var(--main-color-white);
-  transition: 2s fadein;
+  transition: all 2s ease-in-out;
 }
