refactor explore nearby card fix responsiveness

--- a/e_m_adventures/src/components/ExploreNearby/ExploreNearbyContent/ExploreNearbyContent.module.css
+++ b/e_m_adventures/src/components/ExploreNearby/ExploreNearbyContent/ExploreNearbyContent.module.css
@@ -58,7 +58,11 @@
 /* MUST SEE STYLE */
 
 .mustSeeCardContainer {
-  display: none;
+  grid-column: 2;
+  grid-row: 2 / span 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .mustSeeHeading,
@@ -106,7 +110,7 @@
   /* color: hotpink; */
 }
 
-.mustSeeTop {
+/* .mustSeeTop {
   grid-row: 2;
 }
 
@@ -116,7 +120,7 @@
 
 .mustSeeBtm {
   grid-row: 4;
-}
+} */
 
 @media (max-width: 480px) {
   .mustSeeHeading {
@@ -127,14 +131,16 @@
     text-decoration: underline;
   }
 
-  .mustSeeTop,
+  /* .mustSeeTop,
   .mustSeeMid,
   .mustSeeBtm {
     display: none;
-  }
+  } */
 
   .mustSeeCardContainer {
-    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    grid-column: 1;
     grid-row: 6;
     flex-wrap: nowrap;
     overflow-y: scroll;
