--- a/e_m_adventures/src/components/DashboardContent/DashboardContent.module.css
+++ b/e_m_adventures/src/components/DashboardContent/DashboardContent.module.css
@@ -1,3 +1,12 @@
+.grid {
+  min-height: 100vh;
+  display: grid;
+  width: 70%;
+  grid-auto-rows: max-content;
+  grid-template-columns: 100%;
+  margin: 0 auto;
+}
+
 .profile {
   grid-column: 1;
 }
@@ -17,7 +26,7 @@
   justify-content: space-around;
   align-items: center;
   grid-column: 1;
-  grid-row: 3;
+  grid-row: 10;
 }
 
 .logoutBtn,
@@ -29,6 +38,7 @@
   transition: all 0.2s;
   color: var(--main-color-gold);
   border-radius: 3rem;
+  outline: none;
 }
 
 .logoutBtn:hover,
@@ -36,11 +46,6 @@
   background-color: var(--main-color-gold);
   border: 2px solid var(--main-color-black);
   color: var(--main-color-black);
-}
-
-.logoutBtn {
-  /* border: none; */
-  outline: none;
 }
 
 .updateBtn {
@@ -51,17 +56,19 @@
 }
 
 .bookingHeading {
-  grid-row: 1;
-  grid-column: 2;
+  margin-top: 5rem;
 }
 
-.bookingCard {
+.futureDateContainer,
+.pastDateContainer {
   margin: 3rem 0;
-  min-height: 20rem;
+  max-height: 40rem;
+  overflow-x: scroll;
+
   background-color: var(--main-color-black);
   border-radius: 3rem;
-  grid-row: 2;
-  grid-column: 2;
+  /* grid-row: 2;
+  grid-column: 2; */
   display: flex;
   align-items: center;
   align-content: flex-start;
@@ -70,7 +77,13 @@
   padding: 0.5rem;
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.futureDateContainer::-webkit-scrollbar,
+.pastDateContainer::-webkit-scrollbar {
+  display: none;
 }
 
 .bookingCardContent {
