set up modify booking

--- a/e_m_adventures/src/components/DashboardContent/DashboardContent.module.css
+++ b/e_m_adventures/src/components/DashboardContent/DashboardContent.module.css
@@ -62,6 +62,7 @@
 .futureDateContainer,
 .pastDateContainer {
   margin: 3rem 0;
+  min-height: 40rem;
   max-height: 40rem;
   overflow-x: scroll;
 
