add auth to create new user, remove checkout from fulldays, refactor backdrop, fix cancel booking, add backdrop to modify booking

--- a/e_m_adventures/src/components/DashboardContent/DashboardContent.module.css
+++ b/e_m_adventures/src/components/DashboardContent/DashboardContent.module.css
@@ -111,6 +111,50 @@
   font-size: 1rem;
 }
 
+/* BACKDROP STYLE */
+.contentRight img {
+  border-radius: 3rem;
+}
+
+.backdrop h2 {
+  color: var(--main-color-white);
+}
+
+.subHeading {
+  color: var(--main-color-white);
+}
+
+.content {
+  list-style: none;
+  font-size: 2rem;
+}
+
+.content li {
+  margin: 1rem;
+}
+
+.contentBtm {
+  width: 70%;
+  margin: 5rem auto;
+  text-align: center;
+  font-size: 2rem;
+}
+
+.modifyBtn {
+  background-color: var(--main-color-gold);
+  padding: 2rem;
+  border-radius: 3rem;
+}
+
+.modifyBtn,
+.modifyBtn:visited {
+  color: var(--main-color-black);
+}
+
+.modifyBtn:hover {
+  background-color: var(--main-color-white);
+}
+
 @media (max-width: 820px) {
   .bookingCardContent {
     flex-basis: 90%;
