--- a/e_m_adventures/src/components/miniComponents/ErrorComponent/ErrorComponent.module.css
+++ b/e_m_adventures/src/components/miniComponents/ErrorComponent/ErrorComponent.module.css
@@ -1,9 +1,11 @@
 .error {
-  background-color: red;
+  background-color: #83181b;
   width: 90%;
   /* margin: 0 auto; */
   font-size: 2.5rem;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 3rem;
   color: var(--main-color-white);
   transition: all 2s ease-in-out;
@@ -12,6 +14,7 @@
   position: fixed;
   top: 5rem;
   left: 9.5rem;
+  border: 2px solid var(--main-color-gold);
 }
 
 .fixed {
